# p3-spongefish-stark

./: Cargo.toml  README.md
benches/: security_profile_sweep.rs
examples/: poseidon2.rs
src/: ff.rs  lib.rs  relation.rs  rng.rs  security_profile.rs  tests.rs
src/permutation/: mod.rs
src/permutation/keccak/: baby_bear.rs  koala_bear.rs  mod.rs
src/permutation/poseidon2/: baby_bear.rs  koala_bear.rs  mod.rs
