[package]
name = "spongefish-stark"
authors = ["Michele Orrù"]
description = "p3 STARK proofs for spongefish circuits"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
version = "0.1.0"

[workspace]

[features]
default = ["poseidon2", "keccak256", "p3-baby-bear", "p3-koala-bear"]
poseidon2 = ["dep:p3-poseidon2-air", "dep:p3-poseidon2"]
keccak256 = ["dep:keccak", "dep:p3-keccak-air"]
p3-baby-bear = ["dep:p3-baby-bear", "spongefish/p3-baby-bear", "spongefish-circuit/p3-baby-bear"]
p3-koala-bear = ["dep:p3-koala-bear", "spongefish/p3-koala-bear"]

[dependencies]
p3-air = { version = "0.5.2" }
p3-batch-stark = {version = "0.5.2" }
p3-baby-bear = { version = "0.5.2", optional = true }
p3-challenger = { version = "0.5.2" }
p3-commit = { version = "0.5.2" }
p3-dft = { version = "0.5.2" }
p3-field = { version = "0.5.2" }
p3-fri = { version = "0.5.2" }
p3-keccak = { version = "0.5.2" }
p3-keccak-air = {version = "0.5.2", optional = true }
p3-koala-bear = {version = "0.5.2", optional = true }
p3-lookup = { version = "0.5.2" }
p3-matrix = { version = "0.5.2" }
p3-merkle-tree = {version = "0.5.2" }
p3-poseidon2-air = {version = "0.5.2", optional = true }
p3-poseidon2 = { version = "0.5.2", optional = true }
p3-symmetric = { version = "0.5.2" }
p3-uni-stark = {version = "0.5.2" }
postcard = { version = "1.1.3", default-features = false, features = ["alloc"] }
rand = { version = "^0.10", features = ["chacha"] }
keccak = { version = "^0.1.5", optional = true }
spongefish = { version = "0.6.0", default-features = false }
spongefish-circuit = { version = "0.6.0", default-features = false }

[dev-dependencies]
hex-literal = "1.0"

[[example]]
name = "poseidon2"
required-features = ["poseidon2", "p3-koala-bear"]

[[bench]]
name = "security_profile_sweep"
harness = false
required-features = ["poseidon2", "p3-koala-bear"]
